# herta-bin

./: Cargo.toml  LICENSE  README.md  out.txt  package-lock.json  package.json
.github/workflows/: build-release.yml
src/: App.css  App.js  FirstRun.js  FirstRun.module.css  HomePage.js  HomePage.module.css  audio.rs  data.rs  downloader.rs  index.css  index.js  index.module.css  index.rs  logger.rs  main.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  data.rs  downloader.rs  logger.rs  main.rs  types.rs
src-tauri/src/index/: character.rs  enemy.rs
src-tauri/src/types/: frontend.rs
src/index/: character.rs  enemy.rs
