[package]
name = "herta-bin"
version = "0.1.0"
edition = "2021"

[bin]
name = "herta"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern_colored = { version = "0.6.1", features = ["colored"] }
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["stream"] }
scraper = "0.17.1"
tokio = { version = "1.29.1", features = ["full"] }
backend = { git = "https://github.com/Kiwifuit/herta-lib" }