[package]
name = "herta-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern_colored = { version = "0.6.1", features = ["colored"] }
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["stream"]}
tokio = { version = "1.29.1", features = ["full"] }
# herta-lib = { git = "https://github.com/Kiwifuit/herta-lib" }
herta-lib = { path = "../herta-lib" }
url = "2.4.0"
futures-util = "0.3.28"
humantime = "2.1.0"
serde = { version = "1.0.183", features = ["derive"] }
soloud = "1.0.5"
rand = "0.8.5"
