[package]
name = "herta-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern_colored = { version = "0.6.1", features = ["colored"] }
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.29.1", features = ["full"] }
herta-lib = "1.1.7"
url = "2.4.0"
futures-util = "0.3.28"
humantime = "2.1.0"
serde = { version = "1.0.183", features = ["derive"] }
soloud = "1.0.5"
rand = "0.8.5"
humansize = "2.1.3"
thiserror = "1.0.56"

[profile.release]
lto = true
strip = true
opt-level = "z"
debug = false
panic = "abort"
codegen-units = 1
