[package]
name = "app"
version = "0.1.0"
description = "Project Herta Desktop App"
authors = ["Kiwifuit<inhumane.tar.xz@proton.me>"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.5.4", features = [] }
fern_colored = { version = "0.6.1", features = ["colored"] }
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["stream", "native-tls-vendored"] }
tokio = { version = "1.29.1", features = ["full"] }
herta-lib = "1.1.7"
url = "2.4.0"
futures-util = "0.3.28"
humantime = "2.1.0"
soloud = "1.0.5"
rand = "0.8.5"
humansize = "2.1.3"
thiserror = "1.0.56"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
strip = true
opt-level = "z"
debug = false
panic = "abort"
codegen-units = 1
